--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
-<!-- Write your HTML in this file -->
+<!DOCTYPE html>
+<html>
+  <body>
+   <p> has the inner text of <a href = https://flatironschool.com >Flatiron School</a> </p>
+ </body>
+</html>
